--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "paiges-wc-kit",
     "version": "1.1.0",
     "author": "paigeroid",
-    "description": "a small discord bot kit using WillClient and stews that automatically builds commands and compiles classes for you",
+    "description": "a small discord bot kit using WillClient and Stews that automatically builds commands and compiles classes for you",
     "repository": {
         "type": "git",
         "url": "https://github.com/nuttmegg/paiges-wc-kit.git"
