--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "discord.js": "latest",
+        "@discordjs/voice": "latest",
         "willclient": "latest",
         "stews": "latest",
     },
