--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "discord.js": "latest",
         "@discordjs/voice": "latest",
         "willclient": "latest",
+        "node-fetch": "latest",
         "stews": "latest",
     },
     "main": "index.js"
